# apertium-fin-spa

./: .gitattributes  Makefile.am  README  apertium-fin-spa.fin-spa.dix  apertium-fin-spa.fin-spa.t1x  apertium-fin-spa.spa-fin.rtx  configure.ac  modes.xml
test/: fin-spa-chunker-expected.txt  fin-spa-disam-expected.txt  fin-spa-generator-expected.txt  fin-spa-input.txt  fin-spa-interchunk-expected.txt  fin-spa-lex-expected.txt  fin-spa-morph-expected.txt  fin-spa-postchunk-expected.txt  fin-spa-pretransfer-expected.txt  spa-fin-biltrans-expected.txt  spa-fin-chunker-expected.txt  spa-fin-disam-expected.txt  spa-fin-generator-expected.txt  spa-fin-input.txt  spa-fin-morph-expected.txt  spa-fin-postchunk-expected.txt  tests.json
texts/: tarina.fin.txt  tarina.spa.txt
